# reefwatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  manual_scan.py  pyproject.toml  reefwatch_config.yaml  reefwatch_daemon.py  requirements.txt  setup_rules.py  threat_catalog.md
reefwatch/: __init__.py  _common.py  alert_manager.py  config.py  daemon.py
reefwatch/collectors/: file_watcher.py  log_collector.py  network_monitor.py  process_monitor.py
reefwatch/engines/: __init__.py  custom_rules.py  sigma_engine.py  yara_engine.py
service/: com.reefwatch.daemon.plist  reefwatch.service
tests/: conftest.py  test_alert_manager.py  test_config.py  test_config_validation.py  test_custom_rules.py  test_daemon.py  test_file_watcher.py  test_log_collector.py  test_network_monitor.py  test_network_monitor_check.py  test_process_monitor.py  test_sigma_engine.py  test_unified_log.py  test_yara_engine.py
